--- a/index.html
+++ b/index.html
@@ -33,14 +33,6 @@
     <section class="container category">
         <h1>Honey Categories</h1>
         <div class="category-names">
-            <h2>Honey For Health</h2>
-            <h2>Infused Honey</h2>
-            <h2>Pure Honey</h2>
-            <h2>Sweets</h2>
-        </div>
-        <div class="category-names">
-            <h2>Sourwood Honey</h2>
-
         </div>
     </section>
     <footer class="footer">
@@ -51,5 +43,7 @@
             <a href="#"><i class="fa-solid fa-phone fa-lg"></i></a>
         </div>
     </footer>
-    <script src="./scripts/apis.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="./scripts/categories.js"></script>
 </body>
