Implemented the functionality of getting items from database based on the clicked category

--- a/pages/items.html
+++ b/pages/items.html
@@ -30,29 +30,6 @@
     </div>
     <section class="container honey_item">
         <div class="items">
-            <div class="category_item">
-                <h2 class="item_name">Honey Tonic Elderberry</h2>
-                <h2 class="item_price">35$</h2>
-                <img src="../assets/ABC_DSC_2373-honey_tonic_elderberry.jpg" class="item_image">
-                <i class="fa fa-heart"></i> </div>
-            <div class="category_item">
-                <h2 class="item_name">Honey Tonic Ginger</h2>
-                <h2 class="item_price">25$</h2>
-                <img src="../assets/ABC_DSC_2389-honey_tonic_ginger.jpg" class="item_image">
-                <i class="fa fa-heart"></i>
-            </div>
-            <div class="category_item">
-                <h2 class="item_name">Bee Pollen</h2>
-                <h2 class="item_price">28$</h2>
-                <img src="../assets/bee-pollen.jpg" class="item_image">
-                <i class="fa fa-heart"></i>
-            </div>
-            <div class="category_item">
-                <h2 class="item_name">Honey Manuka Newzealand</h2>
-                <h2 class="item_price">30$</h2>
-                <img src="../assets/ABC_HONEY_manuka_newzealand_bees_trees_13oz_1.jpg" class="item_image">
-                <i class="fa fa-heart"></i>
-            </div>
         </div>
     </section>
     <footer class="footer">
@@ -63,5 +40,7 @@
             <a href="#"><i class="fa-solid fa-phone fa-lg"></i></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../scripts/items.js"></script>
 </body>
