--- a/pages/items.html
+++ b/pages/items.html
@@ -43,4 +43,6 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../scripts/items.js"></script>
+    <script src="../scripts/favorites.js"></script>
+
 </body>
